# flowinvoice

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  stack.env
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20251221_190000_001_add_project_sharing_columns.py  20251221_191200_002_add_user_profile_columns.py  20251221_192500_003_add_document_type_settings.py  20251221_200000_004_add_solution_file_tables.py  20251221_210000_005_add_batch_jobs_table.py  20251221_220000_006_add_custom_criteria_table.py  20251224_100000_007_add_legal_checker_column.py  20251226_100000_008_add_oauth_columns.py
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/api/: __init__.py  auth.py  batch_jobs.py  custom_criteria.py  deps.py  document_types.py  documents.py  export.py  feedback.py  generator.py  health.py  legal.py  llm.py  projects.py  rag.py  ruleset_samples.py  rulesets.py  settings.py  solutions.py  stats.py  system.py  user_auth.py  users.py
backend/app/core/: __init__.py  permissions.py  security.py
backend/app/llm/: __init__.py  adapter.py  anthropic.py  base.py  gemini.py  ollama.py  openai.py
backend/app/models/: __init__.py  audit.py  batch_job.py  custom_criterion.py  document.py  document_type.py  enums.py  export.py  feedback.py  llm.py  project.py  project_share.py  result.py  ruleset.py  ruleset_checker.py  ruleset_sample.py  settings.py  solution.py  training.py  user.py
backend/app/rag/: __init__.py  embeddings.py  service.py  vectorstore.py
backend/app/schemas/: __init__.py  batch_job.py  common.py  custom_criterion.py  document.py  document_type.py  feedback.py  grant_purpose.py  llm.py  project.py  qa_scenarios.py  rag.py  result.py  risk.py  ruleset.py  ruleset_checker.py  ruleset_sample.py  settings.py  solution.py  stats.py  user.py
backend/app/seeds/: __init__.py  rulesets.py
backend/app/services/: __init__.py  audit.py  chunking.py  conflict_resolver.py  custom_criteria_engine.py  grant_purpose_checker.py  legal_chunker.py  legal_retrieval.py  parser.py  risk_checker.py  rule_engine.py  solution_matcher.py  solution_parser.py  system_monitor.py  validators.py
backend/app/tests/: __init__.py
backend/app/worker/: __init__.py  celery_app.py  tasks.py
backend/tests/: __init__.py  conftest.py  test_api.py  test_rule_engine.py  test_validators.py
data/: .gitkeep
docker/: .env.example  docker-compose.portainer.gpu.yml  docker-compose.portainer.yml  docker-compose.yml  installer.sh  stack.env
docs/: ENV_VARIABLES.md  FlowAudit_Praesentation.md  INSTALLER_GUIDE.md  Nutzerkonzept.md  TODO.md  analysis_pipeline.md  api_contracts.md  architecture.md  chat.txt  claude.md  cloudflare_tunnel_setup.md  data_classification.md  e2e-report.md  feature_llm_training_workflow.md  generator_templates.md  implementation_plan_tax_selector.md  improvement_plan.md  issues.md  nutzerkonzept.md  operations.md  plan_user_roles_permissions.md  quality.md  rag_learning.md  requirements.md  rulesets.md  theme.md
frontend/: .eslintrc.cjs  Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
installer/: README.md  (+4 more)
(+86 files in other folders)
