# Pfad: /backend/pyproject.toml
# FlowAudit Backend - Python Project Configuration
# FastAPI-basiertes Backend für transparente Rechnungsprüfung mit LLMs

[project]
name = "flowaudit-backend"
version = "0.1.0"
description = "FlowAudit - Transparent Invoice Auditing with LLMs (Seminar System)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "FlowAudit Team"}
]
keywords = ["invoice", "auditing", "llm", "vat", "ustg", "seminar"]

dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",

    # Database
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",

    # Redis & Celery
    "redis>=5.0.1",
    "celery[redis]>=5.3.6",

    # PDF Processing
    "pdfplumber>=0.10.3",
    "pypdf>=3.17.4",
    "python-dateutil>=2.8.2",

    # LLM Clients
    "httpx>=0.26.0",
    "openai>=1.10.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.2",

    # Vector Store / RAG
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",

    # Validation & Serialization
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",

    # Security
    "cryptography>=41.0.7",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Utilities
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.3",
    "psutil>=5.9.8",
    "aiofiles>=23.2.1",

    # Export
    "openpyxl>=3.1.2",
    "xlsxwriter>=3.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
    "pytest-cov>=4.1.0",
    "httpx>=0.26.0",
    "black>=24.1.1",
    "ruff>=0.1.14",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]

gpu = [
    "torch>=2.1.2",
    "transformers>=4.37.1",
]

ocr = [
    # OCR für gescannte PDFs (erfordert tesseract-ocr und poppler-utils)
    "pdf2image>=1.16.3",
    "pytesseract>=0.3.10",
    "Pillow>=10.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "pdfplumber.*",
    "chromadb.*",
    "celery.*",
    "sentence_transformers.*",
]
ignore_missing_imports = true
